--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -43,7 +43,7 @@ jobs:
         run: npm ci
 
       - name: Run linter
-        run: npm run linter
+        run: npm run lint
 
       - name: Check formatting
         run: npm run format:check
